Feature/data nasdaq (#3)
* Nasdaq data demo

* Update reading materials

* Add gitignore

* Update gitignore

* Add python experiments

* Update gitignore rules

* Add Corp yields data

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 Python/thesis
+Python/.ipynb_checkpoints/**
+LaTeX/**.aux
+LaTeX/**.blg
+LaTeX/**-blx.bib
+LaTeX/**.log
+LaTeX/**.txt
+LaTeX/**.run.xml
+LaTeX/**.synctex.gz
+LaTeX/**.toc
