--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 Python/thesis
 Python/.ipynb_checkpoints/**
+LaTeX/Parent.pdf
 LaTeX/**.aux
 LaTeX/**.blg
+LaTeX/**.bbl
 LaTeX/**-blx.bib
 LaTeX/**.log
 LaTeX/**.txt
 LaTeX/**.run.xml
+LaTeX/**.run
 LaTeX/**.synctex.gz
+LaTeX/**.synctex
 LaTeX/**.toc
+LaTeX/**.thm
+LaTeX/**.bcf
